finish the ui edit

--- a/app.json
+++ b/app.json
@@ -35,6 +35,10 @@
       }
     ]
   },
+  "lazyCodeLoading": "requiredComponents",
+  "useExtendedLib": {
+    "weui": true
+  },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
